--- a/badbrowser/templates/badbrowser/unsupported.html
+++ b/badbrowser/templates/badbrowser/unsupported.html
@@ -84,53 +84,53 @@ p {
     <p>
       {% trans "Thank you much for coming by, but unfortunately we are unable to support your web browser." %}
     </p>
-  
+
     <p>
       {% trans "We recommend the latest version of any of these browsers:" %}
     </p>
     {% endblock %}
-    
+
     {% block unsupported_browsers %}
     <ul id="browser_list">
       {% for browser in suggest %}
         {% if browser|lower == "chrome" %}
         <li>
-          <a href="http://www.google.com/chrome"><img src="{{ MEDIA_URL }}badbrowser/browser_chrome.gif"></a>
+          <a href="http://www.google.com/chrome"><img src="{{ STATIC_URL }}badbrowser/browser_chrome.gif"></a>
           <a href="http://www.google.com/chrome"><span>Chrome</span></a>
         </li>
         {% endif %}
-        
+
         {% if browser|lower == "firefox" %}
         <li>
-          <a href="http://firefox.com"><img src="{{ MEDIA_URL }}badbrowser/browser_firefox.gif"></a>
+          <a href="http://firefox.com"><img src="{{ STATIC_URL }}badbrowser/browser_firefox.gif"></a>
           <a href="http://firefox.com"><span>Firefox</span></a>
         </li>
         {% endif %}
-        
+
         {% if browser|lower == "safari" %}
         <li>
-          <a href="http://www.apple.com/safari/download/"><img src="{{ MEDIA_URL }}badbrowser/browser_safari.gif"></a>
+          <a href="http://www.apple.com/safari/download/"><img src="{{ STATIC_URL }}badbrowser/browser_safari.gif"></a>
           <a href="http://www.apple.com/safari/download/"><span>Safari</span></a>
         </li>
         {% endif %}
-        
+
         {% if browser|lower == "opera" %}
         <li>
-          <a href="http://www.opera.com/"><img src="{{ MEDIA_URL }}badbrowser/browser_opera.gif"></a>
+          <a href="http://www.opera.com/"><img src="{{ STATIC_URL }}badbrowser/browser_opera.gif"></a>
           <a href="http://www.opera.com/"><span>Opera</span></a>
         </li>
         {% endif %}
-        
+
         {% if browser|lower == "ie" or browser|lower == "internet explorer" or browser|lower == "microsoft internet explorer" %}
         <li>
-          <a href="http://www.microsoft.com/uk/windows/internet-explorer/"><img src="{{ MEDIA_URL }}badbrowser/browser_ie.gif"></a>
+          <a href="http://www.microsoft.com/uk/windows/internet-explorer/"><img src="{{ STATIC_URL }}badbrowser/browser_ie.gif"></a>
           <a href="http://www.microsoft.com/uk/windows/internet-explorer/"><span>Internet Explorer</span></a>
         </li>
         {% endif %}
       {% endfor %}
     </ul>
     {% endblock %}
-    
+
     {% block unsupported_ignore %}
     <p id="ignore">
       {% trans "You may" %}
@@ -139,7 +139,7 @@ p {
     </p>
     {% endblock %}
   </div>
-  
+
 </div>
 <!-- test data: unsupported browser -->
 {% endblock %}
