--- a/badbrowser/templates/badbrowser/base.html
+++ b/badbrowser/templates/badbrowser/base.html
@@ -1,12 +1,77 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>Unsupported browser</title>
-  {% block extra_head %}{% endblock %}
-</head>
+{% load i18n compress analytics social_tags %}
+<html>
+    <head>
+        <title>{% trans "Unsupported browser" %}</title>
 
-<body>
-  {% block content %}{% endblock %}
-</body>
+
+        {% compress css %}
+        <link href="{{ STATIC_URL }}css/screen.css" media="screen, projection, print" rel="stylesheet" type="text/css"/>
+        <link href="{{ STATIC_URL }}css/navigation.css" media="screen, projection, print" rel="stylesheet" type="text/css"/>
+        {% endcompress %}
+
+
+        {% compress css %}
+        <style>
+
+            body {
+                background: #f5f5f5;
+            }
+
+            #content_base {
+                padding-top: 100px;
+            }
+
+            h1, h2, h3 {
+                color: #CD222D;
+            }
+
+            li > a > img {
+                width: 48px;
+            }
+
+            #ignore {
+                margin-top: 30px;
+            }
+
+
+        </style>
+        {% endcompress %}
+
+
+        <script type="text/javascript" src="https://fast.fonts.net/jsapi/74393084-0320-4c94-a710-e2feebb1e333.js"></script>
+
+        {% analytics %}
+
+    </head>
+
+    <body>
+
+        <div id="header_alt" style="display: block;">
+            <div id="navigation">
+
+                <div id="logo">
+                    <a href="/">
+                        <img src="{{ STATIC_URL }}img/base/logo.svg"/>
+                    </a>
+                </div>
+
+            </div>
+
+            <div id="navigation_right" class="hidden-sm hidden-xs">
+                <ul class="navigation navigation-social">
+                    {% social_links %}
+                </ul>
+            </div>
+        </div>
+
+
+        <div class="container" id="content_base">
+            <div id="content">
+                {% block content %}{% endblock %}
+            </div>
+        </div>
+
+    </body>
 </html>
+
+
